@@ -1,0 +1,4 @@
+"""
+Templates module for GéraldMag.
+Contains templates for project initialization and publication skeletons.
+"""
